# bot

./: .gitignore  DATA.json  README.md  accuracy.py  all.py  app.py  apps.py  index.html  meson.build  requirements.txt  session_backup.json  submission.json  test.py
.github/workflows/: django.yml
Medical_dataset/: test.csv  train.csv
TEMPLATES/: Appointment.html  about.html  chatbot.html  contact.html  home.html  service.html
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
medical_chatbot/: db.sqlite3  requirements.txt
medical_chatbot/chatbot/: models.py  views.py
medical_chatbot/chatbot/data/: medical_data.csv
medical_chatbot/chatbot/migrations/: 0001_initial.py
medical_chatbot/chatbot/templates/: chat.html
medical_chatbot/medical_chatbot/: settings.py  urls.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
static/: Appointment.css  style.css
static/js/: server.js
